--- a/index.html
+++ b/index.html
@@ -5,27 +5,25 @@
     <title>Multi-B2&W2</title>
     <link href="css/reset.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
+    <!--<script src="js/oauth.js"></script>-->
     <script src="js/jquery.min.js"></script>
     <script>
-        $(document).ready(function () {
-            var b2screen = $('img').eq(0);
-            var w2screen = $('img').eq(1);
+        $(document).ready(function (data) {
+            /*debug*/
+            var uid = 12345678;
+            var uname = 'debug';
+            /*debug*/
+            var rate = 100;
+            var screen = $('img').eq(0);
 
-            function refreshb() {
-                $(b2screen).ready(function () {
-                    b2screen.attr('src', 'http://black.s.gerhut.me/');
+            function refresh() {
+                $(screen).ready(function () {
+                    screen.attr('src', 'http://black.s.gerhut.me/');
                 })
-                setTimeout(refreshb, 100);
-            }
-            function refreshw() {
-                $(w2screen).ready(function () {
-                    w2screen.attr('src', 'http://white.s.gerhut.me/');
-                })
-                setTimeout(refreshw, 100);
+                setTimeout(refresh, rate);
             }
             function init() {
-                refreshb();
-                refreshw();
+                refresh();
             }
             init();
         })
@@ -33,9 +31,8 @@
 </head>
 <body>
     <div id="container">
-        <div id="b2"><img src="http://black.s.gerhut.me/" /></div>
+        <div id="screen"><img src="http://black.s.gerhut.me/" /></div>
         <div id="controlpad">
-            <pre id="keyrecord"></pre>
             <div id="keypad">
                 <table>
                     <tbody>
@@ -76,14 +73,16 @@
                     </tbody>
                 </table>
             </div>
-            <div id="chat">
-                <input />
-                <pre>12312<br />123123u21093u2jr0983j 2f083219jd09321j sd09321jfd012<br />12312<br />12312<br />12312<br />12312<br />12312<br />12312<br />12312<br />12312<br /></pre>
 
+
+            <div id="chat">
+                <input /><button>send</button>
+                <pre id="chatrecord">12312<br />12312<br />12312<br />12312<br />123123u21093u2jr0983j 2f083219jd09321j sd09321jfd012<br />12312<br />12312<br />12312<br />12312<br />12312<br />12312<br />12312<br />12312<br /></pre>
+                <pre id="keyrecord">
+1232132112312<br />12312<br />12312<br />12312<br />12312<br />12312<br />12312<br />12312<br />12312<br />
+</pre>
             </div>
         </div>
-        <div id="w2"><img src="http://white.s.gerhut.me/" /></div>
-        <br class="clear" />
     </div>
 </body>
 </html>
