add media query

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <script>
         $(document).ready(function (data) {
             /*debug*/
-            var uid = 12345678;
-            var uname = 'debug';
+            var uid = 12345678,uname = 'debug';
             /*debug*/
             var rate = 100;
             var screen = $('img').eq(0);
@@ -22,6 +21,7 @@
                 })
                 setTimeout(refresh, rate);
             }
+
             function init() {
                 refresh();
             }
@@ -83,6 +83,7 @@
 </pre>
             </div>
         </div>
+        <br style="clear:both"/>
     </div>
 </body>
 </html>
