--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
                 var accessToken = location.hash.substr(
                   location.hash.indexOf('access_token='));
                 accessToken = accessToken.substr(0, accessToken.indexOf('&'));
+
+                var restUrl = 'https://openapi.baidu.com/rest/2.0/passport/users/getLoggedInUser?' + accessToken + '&callback=?'
+                $.getJSON(restUrl).done(function (data) {
+                    if ('error_msg' in data)
+                        return document.write(data.error_msg);
+                    window.run(data);
+                });
                 
                 
             }//登陆认证
