--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <script>
         $(document).ready(function (data) {
             var uid = 0, uname = 'debug';//debug数据
-
             var clientId = '3GMv3CfMcLTSOuHyffkwieIx', rate = 200, gameurl = switchversion(uid);//基本参数
             var screen = $('#screen img'), chatrecord = $('#chatrecord'), keyrecord = $('#keyrecord');//基本元素
             var btnchat = $('#chat button'), txtchat = $('#chat input'), btnkeypad = $('#keypad button'); //互动元素
@@ -82,10 +81,10 @@
                 $(keyrecord).ready(function () {
                     keyrecord.load('http://bwinput.s.gerhut.me/key', function () { keyrecord.text(decodeURIComponent(keyrecord.text().split('\n').reverse().join('\n'))) });
                 })
-                setTimeout(refreshchat, rate);
+                setTimeout(refreshkey, rate);
             }//刷新按键记录
             function init() {
-                auth();
+                //auth();
                 refresh();
                 refreshchat();
                 refreshkey();
