--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 setTimeout(refreshkey, rate);
             }//刷新按键记录
             function init() {
-                //auth();
+                auth();
                 refresh();
                 refreshchat();
                 refreshkey();
