--- a/index.html
+++ b/index.html
@@ -15,20 +15,6 @@
             var screen = $('#screen img'), chatrecord = $('#chatrecord'), keyrecord = $('#keyrecord');//基本元素
             var btnchat = $('#chat button'), txtchat = $('#chat input'), btnkeypad = $('#keypad button'); //互动元素
 
-            function auth() {
-                var accessToken = location.hash.substr(location.hash.indexOf('access_token='));
-                accessToken = accessToken.substr(0, accessToken.indexOf('&'));
-                var restUrl = 'https://openapi.baidu.com/rest/2.0/passport/users/getLoggedInUser?' + accessToken + '&callback=?'
-
-                $.getJSON(restUrl).done(function (data) {
-                    if ('error_msg' in data)
-                    { return document.write(data.error_msg); }
-                    else {
-                        recode(data)
-
-                    }
-                });
-            }//认证
             function login() {
 
                 var oAuthUrl = [
@@ -38,7 +24,19 @@
                 ].join('&');
                 if (location.hash.indexOf('access_token=') === -1)
                     return location.href = oAuthUrl;
-            }//登陆
+
+                var accessToken = location.hash.substr(location.hash.indexOf('access_token='));
+                accessToken = accessToken.substr(0, accessToken.indexOf('&'));
+                var restUrl = 'https://openapi.baidu.com/rest/2.0/passport/users/getLoggedInUser?' + accessToken + '&callback=?'
+
+                $.getJSON(restUrl).done(function (data) {
+                    if ('error_msg' in data)
+                    { return document.write(data.error_msg); }
+                    else {
+                        recode(data);
+                    }
+                });
+            }//登录认证
             function recode(udata) { uid = udata.uid; uname = udata.uname; gameurl = switchversion(uid); }//基本变量重赋值
             function switchversion(uid) {
                 switch (uid % 2) {
@@ -80,7 +78,7 @@
                 setTimeout(refreshkey, rate);
             }//刷新按键记录
             function init() {
-                auth();
+                login();
                 refresh();
                 refreshchat();
                 refreshkey();
