--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="css/main.css" rel="stylesheet" />
     <script src="js/jquery.min.js"></script>
     <script src="js/init.js"></script>
+    <script>$(screen).error()</script>
+
 </head>
 <body>
     <div id="container">
