--- a/index.html
+++ b/index.html
@@ -63,6 +63,6 @@
         
     </div>
     <hr />
-    <p>出问题请微博&nbsp;<a href="http://weibo.com/gerhut">@哈特</a>&nbsp;<a href="http://weibo.com/p/1005051559741693">@摆桌君</a>&nbsp;  </p>
+    <p>问题和意见反馈请微博&nbsp;<a href="http://weibo.com/gerhut">@哈特</a>&nbsp;<a href="http://weibo.com/p/1005051559741693">@摆桌君</a>&nbsp;  </p>
 </body>
 </html>
