--- a/mygod.html
+++ b/mygod.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <img src="http://black.s.gerhut.me/" data-src="http://black.s.gerhut.me/?" onload="load(event)" onerror="load(event)">
 <img src="http://white.s.gerhut.me/" data-src="http://white.s.gerhut.me/?" onload="load(event)" onerror="load(event)">
+<p><label>Interval: <input type="number" id="interval" value="500"></label></p>
 <script>
-var imgs = Array.prototype.slice.call(document.getElementsByTagName('img'))
+var interval = document.getElementById('interval')
 function load(event) {
   var target = event.target;
   setTimeout(function () {
     target.src = target.getAttribute('data-src') + Date.now()
-  }, 500)
+  }, +interval.value)
 }
 </script>
