--- a/mygod.html
+++ b/mygod.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 <img src="http://black.s.gerhut.me/" data-src="http://black.s.gerhut.me/?" onload="load(event)" onerror="load(event)">
 <img src="http://white.s.gerhut.me/" data-src="http://white.s.gerhut.me/?" onload="load(event)" onerror="load(event)">
 <p><label>Interval: <input type="number" id="interval" value="500"></label></p>
