--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
         
     </div>
     <hr />
-    <p>这是一个非黑即白的世界，你们所追求的正义也许正在毁灭着自己。<br />开服时间：2014-3-12 9:40<br />问题和意见反馈请微博&nbsp;<a href="http://weibo.com/gerhut">@哈特</a>&nbsp;<a href="http://weibo.com/p/1005051559741693">@摆桌君</a>&nbsp;  </p>
+    <p>这是一个非黑即白的世界，你们所追求的正义也许正在毁灭着自己。<br />开服时间：2014-3-12 9:40</p>
+    <hr />
+    <p>问题和意见反馈请微博&nbsp;<a href="http://weibo.com/gerhut">@哈特</a>&nbsp;<a href="http://weibo.com/p/1005051559741693">@摆桌君</a>&nbsp;  </p>
 </body>
 </html>
