--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
     <hr />
     <p>这是一个非黑即白的世界，你们所追求的正义也许正在毁灭着自己。</p>
     <hr />
-    <p>开服时间：2014-3-12 9:40<br />问题和意见反馈请微博&nbsp;<a href="http://weibo.com/gerhut">@哈特</a>&nbsp;<a href="http://weibo.com/p/1005051559741693">@摆桌君</a>&nbsp;  </p>
+    <p>开服时间：2014-3-12 9:40 建议使用webkit内核浏览器<br />问题和意见反馈请微博&nbsp;<a href="http://weibo.com/gerhut">@哈特</a>&nbsp;<a href="http://weibo.com/p/1005051559741693">@摆桌君</a>&nbsp;  </p>
 </body>
 </html>
