--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <link href="css/reset.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
+    <script>location.replace('http://link.gerhut.net/')</script>
     <script src="js/jquery.min.js"></script>
     <script src="js/init.js"></script>
 </head>
